Fix sticker header positioning on mobile

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -27,14 +27,6 @@
   }
 }
 
-@media(max-width:1200px) {
-  .sticky .stream-actions {
-    border: none;
-    padding-left: 16px; // 15 + 1px border
-    padding-right: 26px; // 15 + 1px border + original 10px
-  }
-}
-
 .sticky+.group-list {
   margin-top: 64px;
 }
@@ -767,7 +759,7 @@
   .stream-actions {
     .stream-actions-count, .stream-actions-users {
       font-size: 13px;
-      padding-top: 12px;
+      padding-top: 8px;
     }
   }
 }
